[package]
name = "hls-autopause"
version = "0.1.0"
authors = ["Ivan Molodetskikh <yalterz@gmail.com>"]

[lib]
name = "hlsautopause"
crate-type = ["dylib"]

[dependencies]
interpolate_idents = "0.1"
kernel32-sys = { git = "https://github.com/retep998/winapi-rs.git", rev = "2d9b5ba" }
lazy_static = "0.2"
libc = "0.2"
psapi-sys = { git = "https://github.com/retep998/winapi-rs.git", rev = "2d9b5ba" }
user32-sys = { git = "https://github.com/retep998/winapi-rs.git", rev = "2d9b5ba" }
winapi = { git = "https://github.com/retep998/winapi-rs.git", rev = "2d9b5ba" }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
